--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@apollo/client": "^3.7.14",
     "graphql": "^16.6.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "styled-components": "^6.0.0-rc.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.6",
