--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "graphql": "^16.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.2",
     "styled-components": "^6.0.0-rc.2"
   },
   "devDependencies": {
